--- a/main.css
+++ b/main.css
@@ -25,23 +25,43 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 #workBox {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
 }
-#tabs {
-	background-color: #3F3F3F;
-	display: block;
-	width: 100vw;
-	padding-top: 20px;
-	padding-bottom: 20px;
+
+@media screen and (max-width:600px)  {
+	#tabs {
+		background-color: #3F3F3F;
+		display: block;
+		width: 100vw;
+		padding-top: 20px;
+		padding-bottom: 20px;
+	}
+	#tabs li{
+	  font-size: 25px;
+		font-weight: 200;
+		display: block;
+		text-align: center;
+		color: #FFFFFF;
+	}
 }
-#tabs ul{
-	margin-left: 20vw;
-	margin-right: 20vw;
-}
-#tabs li{
-  font-size: 25px;
-	font-weight: 200;
-  padding: 0 6vw;
-	display: inline;
-	color: #FFFFFF;
+@media screen and (min-width:601px)  {
+	#tabs {
+		background-color: #3F3F3F;
+		display: block;
+		width: 100vw;
+		padding-top: 20px;
+		padding-bottom: 20px;
+	}
+	#tabs ul{
+		width: 100vw;
+		margin-right: 20vw;
+		margin-left: 20vw;
+	}
+	#tabs li{
+	  font-size: 25px;
+		font-weight: 200;
+	  padding: 0 6%;
+		display: inline;
+		color: #FFFFFF;
+	}
 }
 #tabs li:hover{
 	color: #F5CB5C;
