--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 	color: #F5CB5C;
 }
 /*Buttons*/
-#matchButton, #exportButton, #submitButton, #txtFileUpload  {
+#matchButton, #exportButton, #submitButton, #txtFileUpload, #updateButton {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   font-size: 17px;
   font-weight: 200;
