--- a/main.css
+++ b/main.css
@@ -44,6 +44,8 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 	}
 	#classAvailable {
 		margin: 5vh 2vw;
+	}#columnTitle {
+		padding-right: 5px;
 	}
 }
 @media screen and (min-width:601px)  {
@@ -71,6 +73,9 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 	}
 	#classAvailable {
 		margin: 5vh 8vw;
+	}
+	#columnTitle {
+		padding-right: 50px;
 	}
 }
 #tabs li:hover{
@@ -125,7 +130,6 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 }
 #columnTitle {
 	text-align: right;
-	padding-right: 50px;
 }
 
 /*Upload Component*/
