--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 }
 @font-face {
 	font-family: "ACMountain";
-	src: url(https://github.com/tsorensen23/blogWithUpVoting/blob/master/assets/fonts/ACMountain.otf);
+	src: url(assets/fonts/ACMountain.otf);
 }
 #header {
   font-family: "ACMountain", "Helvetica Neue", Helvetica, sans-serif;
@@ -23,14 +23,8 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
   background-color: #000000;
   padding: 30px 0;
 }
-#workBox, #available-box, #Upload-box, h4 {
+#workBox, #available-box, #Upload-box, h3, h4 {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
-}
-#tabs h4 {
-	font-size: 25px;
-	font-weight: 200;
-	text-align: center;
-	color: #FFFFFF;
 }
 /*nav bar*/
 @media screen and (max-width:600px)  {
@@ -98,29 +92,38 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 	display: block;
 	margin: 10px auto 10px auto;
 }
-/*Match Component*/
-/*
-#data {
-	display: table;
+/*Login Components*/
+#tabs h4 {
+	font-size: 25px;
+	font-weight: 200;
+	text-align: center;
+	color: #FFFFFF;
+	letter-spacing: 0.075em;
 }
-*/
-#data {
-	display: table;
-	width: 75%;
+#credentials {
+	display: block;
+	padding-top: 30px;
 }
-#dataTable {
-	display: table-cell;
-}
-#dataTable td {
-	padding: ;
-	border-width: 1px;
-	border-spacing: none;
-}
-/*
-.tableDive #dataTable table td {
 
+#loginContainer {
+	display: table;
 }
-*/
+#credentials {
+	display: block;
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 40vw;
+	padding-right: 40vw;
+}
+
+/*Match Component*/
+#loading {
+	width: 50px;
+	display: inline-block;
+	margin: 0 auto;
+}
+
 /*Available Component*/
 .sections {
 	  display: inline-block;
