--- a/main.css
+++ b/main.css
@@ -92,6 +92,19 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 	display: block;
 	margin: 10px auto 10px auto;
 }
+#submitRegister, #loginButtons #submit, #loginButtons #register {
+	font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 17px;
+  font-weight: 200;
+  padding: 10px 20px;
+	border: 1px;
+	border-radius: 4px;
+	display: inline-block;
+	margin-left: 15px;
+}
+#submitRegister {
+	margin-left: 4vw;
+}
 /*Login Components*/
 #tabs h4 {
 	font-size: 25px;
@@ -110,7 +123,7 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 }
 #credentials, #registerInput {
 	display: block;
-	width: 50%;
+	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
 	padding-left: 40vw;
